--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Vite + Preact</title>
+    <title>Cruds</title>
   </head>
   <body>
     <div id="app"></div>
